--- a/.env
+++ b/.env
@@ -1,1 +1,1 @@
-DATABASE_URL='mysql://41obdniihec6brkaxrwb:pscale_pw_7QlVKF4x0eVadetKY68cWchiE7jRZmzGj9Y6tINMqk4@aws.connect.psdb.cloud/createweb?ssl={"rejectUnauthorized":true}'
+DATABASE_URL='mysql://y8hkjzuxlx8120fh8d4n:pscale_pw_sQsnNJTwneLWucXZwKdEdeCe20MzPQ3TcxzaEFvRGDk@aws.connect.psdb.cloud/createweb?ssl={"rejectUnauthorized":true}'
