세션을 이용한 로그인처리

--- a/.env
+++ b/.env
@@ -1,2 +1,1 @@
-DATABASE_URL='mysql://zjaj1d9x00hel78koeh1:pscale_pw_b15GfZwx0XFF0aAh6MCNA6nCwGtbXCBWdLTjzHlvhlC@aws.connect.psdb.cloud/createweb?ssl={"rejectUnauthorized":true}'
-#pscale_pw_b15GfZwx0XFF0aAh6MCNA6nCwGtbXCBWdLTjzHlvhlC
+DATABASE_URL='mysql://ze3twqznc0y25tdp5xfq:pscale_pw_L90J3iM3eTgY4q37T5ReVSSD0Fx1FWER4tx1R5FUsLz@aws.connect.psdb.cloud/createweb?ssl={"rejectUnauthorized":true}'
