회원가입만들기

--- a/.env
+++ b/.env
@@ -1,1 +1,1 @@
-DATABASE_URL='mysql://ze3twqznc0y25tdp5xfq:pscale_pw_L90J3iM3eTgY4q37T5ReVSSD0Fx1FWER4tx1R5FUsLz@aws.connect.psdb.cloud/createweb?ssl={"rejectUnauthorized":true}'
+DATABASE_URL='mysql://0s7gnsgv09u8ou5b1qvm:pscale_pw_m8S4wvd0Ijkx1uU15e1kfXEWnf1XZquVC619YH7HVAN@aws.connect.psdb.cloud/createweb?ssl={"rejectUnauthorized":true}'
